--- a/package.json
+++ b/package.json
@@ -2,23 +2,23 @@
   "name": "shopping-cart",
   "version": "1.0.0",
   "description": "an shopping cart",
-  "private":true,
+  "private": true,
   "main": "index.js",
   "scripts": {
     "start": "webpack --watch",
     "build": "webpack",
-    "prettier":"prettier --config ./.prettierrc \"src/**/*{.jsx,.js,.json}\"",
-    "eslint":"eslint . --ext .js,.jsx",
+    "prettier": "prettier --config ./.prettierrc \"src/**/*{.jsx,.js,.json}\"",
+    "eslint": "eslint . --ext .js,.jsx",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "husky":{
-    "hooks":{
-      "commit-msg":"commitlint -E HUSKY_GIT_PARAMS",
-      "pre-commit":"npm run eslint && npm run build && git add ."
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      "pre-commit": "npm run eslint && npm run build && git add ."
     }
   },
-  "commitlint":{
-    "extends":[
+  "commitlint": {
+    "extends": [
       "@commitlint/config-conventional"
     ]
   },
@@ -30,11 +30,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.12",
+    "@babel/eslint-parser": "7.17.0",
+    "@babel/plugin-transform-arrow-functions": "7.16.7",
+    "@babel/plugin-transform-modules-commonjs": "7.16.8",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@commitlint/cli": "^16.2.1",
     "@commitlint/config-conventional": "^16.2.1",
-    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.3",
     "eslint": "^8.10.0",
     "eslint-config-airbnb": "^19.0.4",
