--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "webpack",
     "prettier": "prettier --config ./.prettierrc \"src/**/*{.jsx,.js,.json}\"",
     "eslint": "eslint . --ext .js,.jsx",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky install"
   },
   "husky": {
     "hooks": {
